--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Trunk Template</title>
-    <link data-trunk rel="sass" href="index.scss" />
+    <title>Ecrous - Web framework on stereoids for Rust</title>
+    <link data-trunk rel="sass" href="style/output.css" />
+    <link data-trunk rel="copy-dir" href="static">
+    <link data-trunk rel="copy-dir" href="images">
+    <link data-trunk rel="rust"/>
   </head>
 </html>
